--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -9,8 +9,10 @@
       b {font-size:8px; font-weight:normal; }
       text { fill:rgba(255,255,255,.7); text-anchor:middle; font-size:9px; }
       .mod { height:120px; width:120px; padding:5px; text-align:center; color:rgba(255,255,255,.7); background:rgba(128,200,225,.2); border-radius:13px; }
-      #mod6 { fill:rgba(128,200,225,.4); width:120px; height:90px; }
+      .mod svg { fill:rgba(128,200,225,.4); width:120px; height:90px; }
       #rect {height:100%; width:100%;}
+      .axis {fill:none; stroke-width:0.5px;}
+      .axis text {font-size:5px;}
     </style>
     <summon request="bluetooth" />
   </head>
