--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -52,32 +52,33 @@
       <foreignobject width="500" height="1400" x="0" y="0"><div id="rect"></div></foreignobject>
       <!-- MODULES -->
       <foreignobject width="130" height="130" x="60" y="60">
-        <div class="mod"><b>MODULE 0</b><br/>Audio Frequency<svg id="mod0"></svg></div>
+        <div class="mod"><b>MODULE 0</b><br/>RF Spectrum<svg id="mod0"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="60">
-        <div class="mod"><b>MODULE 1</b><br/>Microwave Radar<div id="mod1"></div></div>
+        <div class="mod"><b>MODULE 1</b><br/>Ambient<div id="mod1"></div></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="210">
-        <div class="mod"><b>MODULE 2</b><br/>Ambient Sensors<div id="mod2"></div></div>
+        <div class="mod"><b>MODULE 2</b><br/>Radio<div id="mod2"></div></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="210">
-        <div class="mod"><b>CONTROL</b><div id="mod3"></div></div>
+        <div class="mod"><b>MODULE 3</b><br/>Control<svg id="mod3"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="360">
-        <div class="mod"><b>POWER</b><div id="mod4"></div></div>
+        <div class="mod"><b>MODULE 4</b><br/>Power<div id="mod4"></div></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="360">
-        <div class="mod"><b>MODULE 5</b><br/>2.4GHz RF<svg id="mod5"></svg></div>
+        <div class="mod"><b>MODULE 5</b><br/>Audio Frequency<svg id="mod5"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="510">
-        <div class="mod"><b>MODULE 6</b><br/>GPS<svg id="mod6"></svg></div>
+        <div class="mod"><b>MODULE 6</b><br/>Air Quality<svg id="mod6"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="510">
-        <div class="mod"><b>MODULE 7</b><div id="mod7"></div></div>
+        <div class="mod"><b>MODULE 7</b><br/>Microwave Radar<div id="mod7"></div></div>
       </foreignobject>
     </svg>
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script src="js/generate_test_data.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
