--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -2,22 +2,12 @@
 <html>
   <head>
     <title>Signpost</title>
-    <style>
-      html, body { height:100%; margin:0; padding:0; background:url(img/bg.jpg) center center / cover; overflow:hidden; transition:all .3s;}
-      svg { max-height:200%; max-width:100%; font-family: monospace; display:inline-block; margin-bottom:-5px; }
-      line { stroke:rgba(255,255,255,.7); }
-      b {font-size:8px; font-weight:normal; }
-      text { fill:rgba(255,255,255,.7); text-anchor:middle; font-size:9px; }
-      .mod { height:120px; width:120px; padding:5px; text-align:center; color:rgba(255,255,255,.7); background:rgba(128,200,225,.2); border-radius:13px; }
-      .mod svg { fill:rgba(128,200,225,.4); width:120px; height:90px; }
-      #rect {height:100%; width:100%;}
-      .axis {fill:none; stroke-width:0.5px;}
-      .axis text {font-size:5px;}
-    </style>
+    <link rel="stylesheet" href="css/index.css">
     <summon request="bluetooth" />
   </head>
   <body>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 1400" id="sign">
+    <!-- SIGNPOST -->
+    <svg viewBox="0 0 500 1400" id="sign">
       <defs>
         <linearGradient id="d" x1="1" x2="0" y2="1">
           <stop offset="10%" stop-color="#159"/>
@@ -44,36 +34,36 @@
       <rect fill="url(#d)" stroke="rgba(255,255,255,.3)" height="670" width="470" ry="13" rx="13" x="15" y="15" opacity=".95"/>
       <path fill="rgba(255,255,255,.7)" d="M210 315v17h6v26h-6v17h30v-17h-6v-17l16 24 16-24v17h-6v17h30v-17h-6v-26h6v-17h-24l-16 24-16-24h-24z"/>
       <text fill="rgba(255,255,255,.7)" text-anchor="middle" alignment-baseline="central" x="250" y="385">SIGNPOST</text>
+      <foreignobject width="500" height="1400" x="0" y="0"><div id="rect"></div></foreignobject>
       <!-- NUTS & BOLTS -->
       <path fill="url(#b)" d="M257 42h-14l-7-12 7-12h14l7 12z"/>
       <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="30"/>
       <path fill="url(#b)" d="M257 682h-14l-7-12 7-12h14l7 12z"/>
       <circle fill="url(#b)" stroke="#555" r="7" cx="250" cy="670"/>
-      <foreignobject width="500" height="1400" x="0" y="0"><div id="rect"></div></foreignobject>
       <!-- MODULES -->
       <foreignobject width="130" height="130" x="60" y="60">
-        <div class="mod"><b>MODULE 0</b><br/>RF Spectrum<svg id="mod0"></svg></div>
+        <div class="mod"><b>MODULE 0</b><br/><svg id="mod0"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="60">
-        <div class="mod"><b>MODULE 1</b><br/>Ambient<div id="mod1"></div></div>
+        <div class="mod"><b>MODULE 1</b><br/><svg id="mod1"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="210">
-        <div class="mod"><b>MODULE 2</b><br/>Radio<div id="mod2"></div></div>
+        <div class="mod"><b>MODULE 2</b><br/><svg id="mod2"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="210">
-        <div class="mod"><b>MODULE 3</b><br/>Control<svg id="mod3"></svg></div>
+        <div class="mod"><b>MODULE 3</b><br/><svg id="mod3"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="360">
-        <div class="mod"><b>MODULE 4</b><br/>Power<div id="mod4"></div></div>
+        <div class="mod"><b>MODULE 4</b><br/><svg id="mod4"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="360">
-        <div class="mod"><b>MODULE 5</b><br/>Audio Frequency<svg id="mod5"></svg></div>
+        <div class="mod"><b>MODULE 5</b><br/><svg id="mod5"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="60" y="510">
-        <div class="mod"><b>MODULE 6</b><br/>Air Quality<svg id="mod6"></svg></div>
+        <div class="mod"><b>MODULE 6</b><br/><svg id="mod6"></svg></div>
       </foreignobject>
       <foreignobject width="130" height="130" x="310" y="510">
-        <div class="mod"><b>MODULE 7</b><br/>Microwave Radar<div id="mod7"></div></div>
+        <div class="mod"><b>MODULE 7</b><br/><svg id="mod7"></svg></div>
       </foreignobject>
     </svg>
     <script src="https://d3js.org/d3.v3.min.js"></script>
