Add BLE parsing functions and websocket

--- a/user-interfaces/examples/signpost/www/index.html
+++ b/user-interfaces/examples/signpost/www/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Signpost</title>
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" href="css/index.css">
     <summon request="bluetooth" />
   </head>
@@ -67,7 +68,7 @@
       </foreignobject>
     </svg>
     <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script src="js/generate_test_data.js"></script>
     <script src="js/index.js"></script>
   </body>
