--- a/mobile-app/www/parsejs/index.html
+++ b/mobile-app/www/parsejs/index.html
@@ -2,20 +2,9 @@
 
 <html>
     <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
-        <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' data: gap: gateway: https://ssl.gstatic.com https://summon-caster.appspot.com * 'unsafe-eval'; style-src 'self' 'unsafe-inline' http://fonts.googleapis.com; font-src 'self' http://fonts.googleapis.com http://fonts.gstatic.com;">
         <script type="text/javascript" src="js/buffer.min.js"></script>
         <script type="text/javascript" src="js/urlparse.1.1.7.min.js"></script>
-        <!-- <script type="text/javascript" src="js/blees.js"></script> -->
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -47,19 +36,7 @@
                 <input type="button" id="influx-save" value="Save"><br />
             </div>
         </div>
-
-
-
-
-
-        <script type="text/javascript" src="cordova.js"></script>
-
-
-        <!-- <script type="text/javascript" src="js/buffer-browserify-5.0.1.js"></script> -->
-        <!-- <script type="text/javascript" src="js/buffer.js"></script> -->
-        <!-- <script type="text/javascript" src="js/buffer-browserify2.js"></script> -->
-        <!-- <script type="text/javascript" src="https://wzrd.in/standalone/buffer"></script> -->
-
+        <script type="text/javascript" src="../cordova.js"></script>
         <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="js/cache.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
